# Checkpoint

./: .gitignore  CMakeLists.txt  Checkpoint.sln
Content/: CMakeLists.txt
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Core/Include/: Core.hpp  ECS.hpp
Core/src/: Main.cpp  pch.hpp
Core/src/Components/: DirtyPattern.hpp  Transform.hpp
Core/src/Context/: Devices.cpp  Devices.hpp  Platform.cpp  Platform.hpp  VulkanContext.cpp  VulkanContext.hpp
Core/src/Core/: Scene.cpp  Scene.hpp
Core/src/Data Structures/: SparseSet.hpp
Core/src/ECS/: EntityComponentSystem.hpp
Core/src/ECS/Component/: ComponentBase.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentRegistry.hpp  ComponentSparseSet.hpp  ComponentWidget.hpp  IComponentSerializer.hpp
Core/src/ECS/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
Core/src/ECS/System/: System.hpp  SystemManager.cpp  SystemManager.hpp
Core/src/Editor/: FileDropLineEdit.cpp  FileDropLineEdit.hpp  Project.cpp  Project.hpp  ResourceDropLineEdit.cpp  ResourceDropLineEdit.hpp
Core/src/Helpers/: Helpers.cpp  Helpers.hpp  MemoryHelper.hpp
Core/src/Render/: Frame.cpp  Frame.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp
Core/src/Render/Pipeline/: DescriptorSetManager.cpp  DescriptorSetManager.hpp  LayoutsManager.cpp  LayoutsManager.hpp  Material.hpp  PipelinesManager.cpp  PipelinesManager.hpp  SetLayoutsManager.cpp  SetLayoutsManager.hpp
Core/src/Render/Renderer/: Camera.cpp  Camera.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererInstance.cpp  RendererInstance.hpp  RendererPrototype.cpp  RendererPrototype.hpp  Renderpass.cpp  Renderpass.hpp
Core/src/Render/Setup/: Frame.cpp  Frame.hpp  RenderTarget.cpp  RenderTarget.hpp  Swapchain.cpp  Swapchain.hpp
Core/src/Resources/: Material.cpp  Material.hpp  MaterialInstance.cpp  MaterialInstance.hpp  Mesh.cpp  Mesh.hpp  ResourceManager.cpp  ResourceManager.hpp  Texture.cpp  Texture.hpp
Core/src/Util/: Buffer.hpp  Clock.hpp  Logger.hpp
Core/src/Util/Serializers/: ISerializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  Serializable.hpp  Serializer.hpp
Core/src/Util/ShaderCompiler/: SlangCompiler.cpp  SlangCompiler.hpp
Dependencies/: LoadDependencies.bat
ECS/: ECS.vcxproj  ECS.vcxproj.filters
ECS/Include/: ECS.hpp
ECS/src/: ComponentManager.hpp  ComponentRegistry.hpp  ComponentSparseSet.hpp  ComponentWidget.hpp  Entity.hpp  EntityComponentSystem.hpp  EntityManager.cpp  EntityManager.hpp  SparseSet.h  SparseSet.hpp  System.hpp  SystemManager.hpp  pch.hpp
ECS/src/Component/: ComponentBase.hpp  ComponentManager.hpp  ComponentRegistry.hpp  ComponentSparseSet.hpp  ComponentWidget.hpp  IComponentSerializer.hpp
Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  tmp_fragment.spv  tmp_vertex.spv
Editor/DEBUG/: HALF_QUAD.spv
Editor/PROJECTS/Yolo/: Yolo.data
Editor/src/: CheckpointEditor.cpp  CheckpointEditor.hpp  ECSWrapper.cpp  ECSWrapper.hpp  ECSWrapper.ixx  Launcher.hpp  MOC_Launcher.cpp  MOC_MainWindow.cpp  MOC_NewProjectDialog.cpp  MOC_VulkanRenderer.cpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  NewProjectDialog.hpp  Project.cpp  Project.hpp  VulkanRenderer.hpp  macros.hpp  pch.hpp
Editor/src/Components/: ComponentView.hpp  MeshRenderer.hpp  Transform.hpp
Editor/src/EditorScripting/: EditorScripting.Core.ixx  EditorScripting.Util.ixx  EditorScripting.Window.ixx  EditorScripting.ixx
Editor/src/EditorUI/: EditorUI.Core.ixx  EditorUI.Primitive.ixx  EditorUI.Private.ixx  EditorUI.Util.ixx  EditorUI.Window.ixx  EditorUI.ixx
Editor/src/EditorUI/QtWidgets/: AssetBrowser.cpp  AssetBrowser.hpp  ColoredIconButton.hpp  ComponentCollapsible.hpp  DraggableDock.hpp  DropMainWindow.hpp  FileDropPreviewWidget.hpp  Helper.cpp  Helper.hpp  Inspector.cpp  Inspector.hpp  PrimitiveFields.hpp  SceneHierarchy.hpp  VulkanRendererWidget.hpp
Editor/src/PluginLoader/: PluginContext.ixx  PluginLoader.ixx
Editor/src/Renderers/: BasicRenderer.cpp  BasicRenderer.hpp  EditorRenderer.cpp  EditorRenderer.hpp  MinimalistRenderer.cpp  MinimalistRenderer.hpp
Editor/src/Widgets/: Collapsible.hpp  EnumMultiSelectDropDown.hpp  Inspector.hpp  MOC_Collapsible.cpp  MOC_EnumMultiSelectDropDown.cpp  MOC_Inspector.cpp  MOC_SearchList.cpp  SearchList.hpp  TreeEntityItem.hpp
Editor/src/Widgets/ComponentFields/: ComponentField.hpp  FileDropLineEdit.hpp  Int.hpp  MOC_ComponentField.cpp  MOC_FileDropLineEdit.cpp  MOC_Int.cpp  MOC_NumericFields.cpp  MOC_Quat.cpp  MOC_ResourceDropLineEdit.cpp  MOC_String.cpp  MOC_Vec3.cpp  Numeric.hpp  NumericFields.hpp  Quat.hpp  ResourceDropLineEdit.hpp  String.hpp
Editor/src/Widgets/Fields/: Field.hpp  Quat.hpp  Vec3.hpp
Editor/src/Widgets/Launcher/: Button.hpp  MOC_Button.cpp  MOC_ProjectOverview.cpp  MOC_ProjectTableView.cpp  ProjectOverview.hpp  ProjectTableView.hpp
EditorPluginTest/: CMakeLists.txt  Main.ixx
EngineWidgets/: CMakeLists.txt  EngineWidgets.vcxproj  EngineWidgets.vcxproj.filters
EngineWidgets/Include/: Widgets.hpp
EngineWidgets/src/: ComponentField.hpp  Float.hpp  FloatFields.hpp  Numeric.hpp  NumericFields.hpp  QuaternionField.hpp  StringField.hpp  Vector.hpp  VectorFields.hpp  pch.hpp
EngineWidgets/src/MOCs/: MOC_ComponentField.cpp  MOC_FloatFields.cpp  MOC_NumericFields.cpp  MOC_QuaternionField.cpp  MOC_StringField.cpp  MOC_VectorFields.cpp
Example/: Example.vcxproj  Example.vcxproj.filters
Example/Models/Furniture/: Comptoir.fbx  Comptoirv2.fbx
Example/Models/Primitive/: cube.fbx  debugcube.fbx  debugcube.mtl
Example/Shaders/: BNL.spv  BaseNormalLighting.slang  CNL.spv  ColorNormalLighting.slang  PTriangle.spv  Shader.spv  ShadowMapping.slang  ShadowMapping.spv  TNL.spv  Test.spv  TexturedNormalLighting.slang  Triangle.slang  Triangle.spv  VTriangle.spv
Example/src/: BasicRenderer.cpp  BasicRenderer.hpp  Main.cpp  pch.hpp
Pre-Proc/: Pre-Proc.vcxproj  Pre-Proc.vcxproj.filters  PreProcessor.hpp
TO_INCLUDE_IN_BUILD/DEBUG/: Colored.slang  HALF_QUAD.slang
TO_INCLUDE_IN_BUILD/Editor_Resources/: Stylesheet.qss
(+32 files in other folders)
